syntax = "proto3";

import "PB_Mode.proto";
import "PB_Polar.proto";

message PB_State {
    PB_Mode mode = 1;
    uint32 cycle = 2;
    PB_Polar speed_current = 3;
    PB_Polar speed_order = 4;
}
